@@ -3944,13 +3944,18 @@ static void zend_compile_assert(znode *result, zend_ast_list *args, zend_string 
 		}
 		opline->result.num = zend_alloc_cache_slot();
 
-		if (args->children == 1 &&
-		    (args->child[0]->kind != ZEND_AST_ZVAL ||
-		     Z_TYPE_P(zend_ast_get_zval(args->child[0])) != IS_STRING)) {
+		if (args->children == 1) {
 			/* add "assert(condition) as assertion message */
-			zend_ast_list_add((zend_ast*)args,
-				zend_ast_create_zval_from_str(
-					zend_ast_export("assert(", args->child[0], ")")));
+			zend_ast *arg = zend_ast_create_zval_from_str(
+				zend_ast_export("assert(", args->child[0], ")"));
+			if (args->child[0]->kind == ZEND_AST_NAMED_ARG) {
+				/* If the original argument was named, add the new argument as named as well,
+				 * as mixing named and positional is not allowed. */
+				zend_ast *name = zend_ast_create_zval_from_str(
+					zend_string_init("description", sizeof("description") - 1, 0));
+				arg = zend_ast_create(ZEND_AST_NAMED_ARG, name, arg);
+			}
+			zend_ast_list_add((zend_ast *) args, arg);
 		}
 
 		zend_compile_call_common(result, (zend_ast*)args, fbc);
